contrast fix

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -165,6 +165,7 @@ width: 100%;
 
 #callToAction p{
     margin: 1.5rem;
+    font-weight: bolder;
 }
 
 #largeJoin a {
@@ -173,14 +174,15 @@ width: 100%;
 
 #largeJoin {
     font-size: 45px;
-    background-color: rgba(161, 173, 255, 0.641);
+    background-color: rgb(233, 244, 247);
     padding: .5rem;
     border-radius: 25%;
-    box-shadow: 1px 1px 10px 5px black;
+    box-shadow: 1px 1px 10px 5px rgb(39, 39, 42);
 }
 
 #largeJoin:hover {
-    background-color: rgb(141, 136, 222);
+    background-color: rgb(0, 196, 250);
+
 }
 
 .pageItems {
